--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,5 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  margin-bottom: 200px;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -13,56 +8,81 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
 }
+.logo {
+  font-size: 40px;
+  background-color: greenyellow;
+  font-style: italic;
+  padding-left: 10px;
+}
 
-/* New styles for custom card */
-.custom-card {
-  border: 2px solid #ccc;
-  border-radius: 10px;
-  background-color: #f8f9fa;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+.togglePage {
+  background-color: white;
+  text-align: center;
+  border-radius: 33px;
+  margin-top: 40px;
+  width: 300px;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  justify-content: space-around;
+}
+
+.togglePage ul {
+  list-style: none;
+}
+
+.togglePage li {
+  display: inline-block;
   margin: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-.custom-card .card-title {
-  color: #007bff;
-}
-
-.custom-card .card-text {
-  color: #6c757d;
-}
-
-h1 {
-  text-decoration: underline;
-}
-
-.text-blurb {
-  margin-bottom: 200px;
+.logo h1 {
+  text-align: center;
+  font-size: 64px;
+  font-style: normal; 
+  font-weight: 600;
+  color: #C8D5BB;
   margin-top: 50px;
 }
 
-.text-blurb h1 {
+.text-blurb {
   margin-bottom: 100px;
+  margin-top: 50px;
+  border-radius: 33px;
+  padding: 30px;
+  background: #C8D5BB;
+}
+
+
+.text-blurb p {
+  color: #47585C;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.QOTD {
+  border-radius: 33px;
+  background: #C8D5BB;
+  padding: 10px;
+  margin-bottom: 20px;
+}
+
+.QOTD h2 {
+  color: #47585C;
+  text-align: center;
+  font-size: 24px;
+  font-style: italic;
 }
