--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,7 @@
 .App {
   margin-bottom: 200px;
+  display: flex;
+  flex-direction: column;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -17,53 +19,25 @@
     transform: rotate(360deg);
   }
 }
-.logo {
-  font-size: 40px;
-  background-color: greenyellow;
-  font-style: italic;
-  padding-left: 10px;
-}
 
-.togglePage {
-  background-color: white;
-  text-align: center;
-  border-radius: 33px;
-  margin-top: 40px;
-  width: 300px;
-  margin-left: auto;
-  margin-right: auto;
+.content {
   display: flex;
   justify-content: space-around;
+  padding-top: 20px;
 }
 
-.togglePage ul {
-  list-style: none;
-}
-
-.togglePage li {
-  display: inline-block;
-  margin: 10px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
-
-.logo h1 {
-  text-align: center;
-  font-size: 64px;
-  font-style: normal; 
-  font-weight: 600;
-  color: #C8D5BB;
-  margin-top: 50px;
+.text-blurb,
+.QOTD {
+  border-radius: 33px;
+  background: #C8D5BB;
+  padding: 30px;
+  box-sizing: border-box;
+  margin-bottom: 20px; /* Adjust the margin as needed */
 }
 
 .text-blurb {
-  margin-bottom: 100px;
-  margin-top: 50px;
-  border-radius: 33px;
-  padding: 30px;
-  background: #C8D5BB;
+  width: 40%;
 }
-
 
 .text-blurb p {
   color: #47585C;
@@ -71,18 +45,20 @@
   font-style: normal;
   font-weight: 400;
   line-height: normal;
+  margin: 0; /* Reset the margin to avoid additional spacing */
 }
 
 .QOTD {
-  border-radius: 33px;
-  background: #C8D5BB;
-  padding: 10px;
-  margin-bottom: 20px;
+  width: 55%;
+  height: 100px;
+  padding: 10px; /* Adjust the padding as needed */
 }
+
 
 .QOTD h2 {
   color: #47585C;
-  text-align: center;
   font-size: 24px;
   font-style: italic;
+  margin: 0; /* Reset the margin to avoid additional spacing */
+  padding-left: 10px;
 }
